force-app/main/default/objects/Integration_Request__c/Integration_Request__c.object-meta.xml
<CustomObject>
    <label>Integration Request</label>
    <nameField>
        <displayFormat>IR-{00000000}</displayFormat>
        <label>Integration Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>