force-app/main/default/objects/Integration_Request__c/fields/API_Method__c.field-meta.xml
<CustomField>
    <fullName>API_Method__c</fullName>
    <label>API Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NAV-createCar</fullName>
            </value>
            <value>
                <fullName>NAV-updateCar</fullName>
            </value>
            <value>
                <fullName>NAV-createInvoiceQuote</fullName>
            </value>
            <value>
                <fullName>UnitTest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>