force-app/main/default/objects/Integration_Request__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>if needed specify data / request body</description>
    <inlineHelpText>if needed specify data / request body</inlineHelpText>
    <label>Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>