force-app/main/default/objects/Integration_Request__c/fields/Last_Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Processing_Time__c</fullName>
    <label>Last Processing Time</label>
    <type>DateTime</type>
</CustomField>