force-app/main/default/objects/Integration_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>API_Method__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Last_Processing_Time__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>